--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,11 @@ body {
   padding: 20px;
 }
 
+.patent-summary-container{
+  background-color: #fbf6f0;
+  padding: 20px;
+}
+
 h1{
   color: white;
   font-family: 'Sacramento', cursive;
